[gd_scene load_steps=12 format=3 uid="uid://vdocs38e3ce0"]

[ext_resource type="PackedScene" uid="uid://ku50560na3tw" path="res://demo/test-scenes/cut-scenes/CutSceneBasic.tscn" id="1"]
[ext_resource type="PackedScene" path="res://demo/src/RigidBody2D.tscn" id="2"]
[ext_resource type="PackedScene" path="res://demo/src/FractureShard.tscn" id="3"]
[ext_resource type="Script" path="res://demo/src/CutFracture.gd" id="4"]
[ext_resource type="PackedScene" path="res://demo/src/CutShapeVisualizer.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://dhrqqo38wiuqi" path="res://pool-manager/Pool2DBasic.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://bsrwyn1s0ui61" path="res://demo/smiley-face.png" id="7"]
[ext_resource type="Texture2D" uid="uid://3igvussru6ef" path="res://demo/tile-test-01.png" id="8"]
[ext_resource type="Script" path="res://demo/src/RigidBody2D.gd" id="9"]

[sub_resource type="PhysicsMaterial" id="1"]
friction = 0.0
bounce = 1.0

[sub_resource type="PhysicsMaterial" id="2"]
friction = 0.0
bounce = 1.0

[node name="CutFracture" instance=ExtResource("1")]

[node name="CutFracture" type="Node2D" parent="." index="0"]
script = ExtResource("4")
fracture_body_color = Color(0.917647, 0.313726, 0.313726, 1)
rigidbody_template = ExtResource("2")

[node name="SourcePolygons" type="Node2D" parent="CutFracture" index="0"]
show_behind_parent = true

[node name="RigidBody2D" type="RigidBody2D" parent="CutFracture/SourcePolygons" index="0"]
position = Vector2(1139.98, -682.293)
collision_layer = 4
collision_mask = 5
mass = 100.0
physics_material_override = SubResource("1")
gravity_scale = 0.0
script = ExtResource("9")
rand_linear_velocity_range = Vector2(500, 1000)
placed_in_level = true
randomize_texture_properties = false
poly_texture = ExtResource("7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CutFracture/SourcePolygons/RigidBody2D" index="0"]

[node name="Polygon2D" type="Polygon2D" parent="CutFracture/SourcePolygons/RigidBody2D" index="1"]
show_behind_parent = true
color = Color(0.545098, 0.545098, 0.545098, 1)
texture_offset = Vector2(256, 256)

[node name="Line2D" type="Line2D" parent="CutFracture/SourcePolygons/RigidBody2D/Polygon2D" index="0"]
default_color = Color(1.25, 1.25, 1.25, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Center" type="Polygon2D" parent="CutFracture/SourcePolygons/RigidBody2D" index="2"]
visible = false
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-10.3909, 0.536697, -0.314636, -12.5448, 10.6455, 0.183144, 0.0389175, 12.0272)

[node name="RigidBody2D2" parent="CutFracture/SourcePolygons" index="1" instance=ExtResource("2")]
position = Vector2(1241.69, 542.444)
mass = 40.0
physics_material_override = SubResource("1")
rand_linear_velocity_range = Vector2(500, 1000)
radius = 100.0
placed_in_level = true

[node name="RigidBody2D3" parent="CutFracture/SourcePolygons" index="2" instance=ExtResource("2")]
position = Vector2(-1271.35, 589.061)
mass = 120.0
physics_material_override = SubResource("1")
rand_linear_velocity_range = Vector2(500, 1000)
radius = 300.0
placed_in_level = true
poly_texture = ExtResource("8")

[node name="RigidBody2D4" parent="CutFracture/SourcePolygons" index="3" instance=ExtResource("2")]
position = Vector2(-1322.21, -597.536)
mass = 20.0
physics_material_override = SubResource("1")
rand_linear_velocity_range = Vector2(500, 1000)
radius = 50.0
placed_in_level = true

[node name="RigidBody2D5" parent="CutFracture/SourcePolygons" index="4" instance=ExtResource("2")]
position = Vector2(-546.682, 76.2813)
mass = 50.0
physics_material_override = SubResource("1")
rand_linear_velocity_range = Vector2(500, 1000)
radius = 125.0
placed_in_level = true
poly_texture = ExtResource("8")

[node name="RigidBody2D6" parent="CutFracture/SourcePolygons" index="5" instance=ExtResource("2")]
position = Vector2(402.595, -606.012)
mass = 30.0
physics_material_override = SubResource("1")
rand_linear_velocity_range = Vector2(500, 1000)
radius = 75.0
placed_in_level = true

[node name="RigidBody2D7" parent="CutFracture/SourcePolygons" index="6" instance=ExtResource("2")]
position = Vector2(317.839, 385.644)
mass = 80.0
physics_material_override = SubResource("1")
rand_linear_velocity_range = Vector2(500, 1000)
radius = 200.0
placed_in_level = true
poly_texture = ExtResource("8")

[node name="Parent" type="Node2D" parent="CutFracture" index="1"]

[node name="Edge" type="StaticBody2D" parent="CutFracture" index="2"]
modulate = Color(0.537255, 0.266667, 0.266667, 1)
position = Vector2(0, 933.82)
physics_material_override = SubResource("2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CutFracture/Edge" index="0"]
polygon = PackedVector2Array(-1888.94, -360.544, -1652.27, -611.544, -1891.09, -1005.08, -1888, -1893.82, 1888, -1893.82, 1903.04, -70.0054, 1492.68, 114.992, 320, -325.82, -256, -325.82, -1719.55, 114.992, -1888, -69.82, -1888.94, -357.922, -2024.51, -319.195, -2069.36, 219.263, 2037.58, 313.443, 2081.48, -2057.26, -1996.06, -2091.24, -2025.33, -322.011)

[node name="Polygon2D" type="Polygon2D" parent="CutFracture/Edge" index="1"]
color = Color(0.603922, 0.603922, 0.603922, 1)
polygon = PackedVector2Array(-1888, -69.82, -1715.91, 115.684, -256, -325.82, 320, -325.82, 1489.84, 111.195, 1902.91, -72.8892, 1888, -1893.82, -1888, -1893.82, -1891.02, -1006.78, -1644.07, -611.671, -2025.71, -225.544, -1998.77, -2097.81, 2082.5, -2052.91, 2037.6, 322.217, -2066.12, 223.441, -2084.08, -369.219, -1888, -453.82)

[node name="Line2D" type="Line2D" parent="CutFracture/Edge/Polygon2D" index="0"]
points = PackedVector2Array(-1649.77, -613.744, -1891.67, -1001.8, -1888, -1893.82, 1888, -1893.82, 1900.69, -74.4978, 1495, 109.451, 320, -325.82, -256, -325.82, -1717.37, 115.107, -1888, -69.82, -1888, -357.82, -1649.31, -613.507)
width = 15.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="CutLine" type="Line2D" parent="CutFracture" index="3"]
default_color = Color(2, 0.57, 0.57, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Pool_CutVisualizer" parent="CutFracture" index="4" instance=ExtResource("6")]
placed_in_level = true
instance_template = ExtResource("5")
max_amount = 30
instantiate_new_on_empty = true
keep_instances_in_tree = true

[node name="Pool_FractureShards" parent="CutFracture" index="5" instance=ExtResource("6")]
placed_in_level = true
instance_template = ExtResource("3")
max_amount = 250
keep_instances_in_tree = true

[node name="Camera2D" parent="." index="1"]
position = Vector2(-26, 4)

[node name="Title" parent="CanvasLayer" index="0"]
anchors_preset = -1
anchor_left = 0.616
anchor_top = 0.069
anchor_right = 0.616
anchor_bottom = 0.069
offset_left = -314.387
offset_top = -47.8533
offset_right = 315.613
offset_bottom = -11.8533
grow_horizontal = 2

[node name="InfoLabel" parent="CanvasLayer" index="1"]
anchors_preset = -1
anchor_left = 0.594
anchor_top = 1.815
anchor_right = 0.594
anchor_bottom = 1.815
offset_left = 161.338
offset_top = -278.382
offset_right = 387.338
offset_bottom = -147.382
